[metadata]
name = backend.ai-storage-agent
version = attr: ai.backend.storage.__version__
description = Backend.AI Storage Agent
long_description = file: README.md
long_description_content_type = text/markdown
url = https://backend.ai
author = Lablup Inc.
author_email = kyujin.cho@lablup.com
license = LGPLv3
classifiers =
    Development Status :: 1 - Alpha
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Environment :: No Input/Output (Daemon)
    Topic :: Scientific/Engineering
    Topic :: Software Development
project_urls =
    Documentation = https://docs.backend.ai
    Source = https://github.com/lablup/backend.ai-storage-agent
    Tracker = https://github.com/lablup/backend.ai-storage-agent/issues

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6,<3.7
setup_requires =
    setuptools>=41.0.1
install_requires =
    aiozmq==0.7.1
    async-timeout==3.0.1
    attrs==19.1.0
    chardet==3.0.4
    idna==2.8
    idna-ssl==1.1.0
    multidict==4.5.2
    pyzmq==18.1.0
    typing-extensions==3.7.4
    yarl==1.3.0
zip_safe = false
include_package_data = true

[options.extras_require]
build =
    wheel>=0.33.4
    twine>=1.13.0
test =
    pytest>=5.0.1
    pytest-asyncio>=0.10.0
    pytest-cov
    pytest-mock
    asynctest
    flake8>=3.7.0
    codecov
dev =
    pytest-sugar
ci =
monitor =
    backend.ai-stats-monitor
    backend.ai-error-monitor

[options.packages.find]
where = src
include = ai.backend.*

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E128,E129,E722,E731,E221,E241,E401,W504,N801,N802
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,dist,docs

[tool:pytest]
testpaths = tests
markers =
    integration: Test cases that require spawning Dockerized kernel sessions
